<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.koistorynew.ui.blog.BlogFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/nav_market"
        android:name="com.koistorynew.ui.market.MarketFragment"
        android:label="@string/menu_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/nav_consult"
        android:name="com.koistorynew.ui.consult.ConsultFragment"
        android:label="@string/menu_consult"
        tools:layout="@layout/fragment_consult" />
    <fragment
        android:id="@+id/nav_mymarket"
        android:name="com.koistorynew.ui.mymarket.MyMarketFragment"
        android:label="@string/menu_mymarket"
        tools:layout="@layout/fragment_mymarket" />
    <fragment
        android:id="@+id/nav_myconsult"
        android:name="com.koistorynew.ui.myconsult.MyConsultFragment"
        android:label="@string/menu_myconsult"
        tools:layout="@layout/fragment_myconsult" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.koistorynew.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.koistorynew.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.koistorynew.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>